--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+*{
+    font-family: 'Cascadia Code';
+}
+
+body, html {
+    margin: 0px;
+    padding: 0px;
+    background-image: url('./assets/images/pattern-back.jpg');
+}
