--- a/src/app/crm/pages/clientes/clientes.component.html
+++ b/src/app/crm/pages/clientes/clientes.component.html
@@ -16,18 +16,21 @@
             <th> Anotaciones </th>
         </tr>
     
-        <tr *ngFor="let cliente of clientes"> 
+         <tr *ngFor="let cliente of clientes"> 
             <td> {{cliente.name}}   </td>
             <td> {{cliente.number}} </td>
             <td> {{cliente.email}} </td>
             <td> {{cliente.placeWork}} </td>
             <td> {{cliente.desc}}  </td>
-            <td> <button> Editar </button>  </td>
-            <td> <button> Eliminar </button>  </td>
-            
+            <td> <button [routerLink]="['/home/editar', cliente.id]" > Editar </button>  </td>
+            <td> <button (click)="borrar()"> Borrar registro </button>  </td>
         </tr>
-    
-    
     </table>
+
+    <div class="flex-reg">
+        
+        <span class="register-none"> {{hayRegistros}} </span>
+
+    </div>
 
 </div>
