--- a/src/app/crm/pages/clientes/clientes.component.scss
+++ b/src/app/crm/pages/clientes/clientes.component.scss
@@ -64,5 +64,21 @@
         }
     }
 
+    .flex-reg{
+
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        margin-top: 70px;
+
+        .register-none{
+            text-align: center;
+            font-size: 30px;
+            color: red;
+        }
+    }
+
+
 }
 
