fix bug but not complete

--- a/src/app/crm/pages/nuevo-cliente/nuevo-cliente.component.html
+++ b/src/app/crm/pages/nuevo-cliente/nuevo-cliente.component.html
@@ -56,8 +56,11 @@
             <button class="btnSubmit" 
             type="submit">
             Guardar </button>
+            
+            <button (click)="borrar()"> Borrar registro </button>  
         
            </form>
+
 
            
            <h2> Estado de formulario: </h2>
