--- a/src/app/crm/pages/clientes/clientes.component.html
+++ b/src/app/crm/pages/clientes/clientes.component.html
@@ -3,8 +3,8 @@
     <h2 class="animate__animated animate__fadeInDown" > Clientes registrados </h2>
 
     <div class="flex-input animate__animated animate__fadeIn ">
-        <input class="search" type="text" placeholder="Search for any record...">
-
+        <app-search-input></app-search-input>
+    
     </div>
 
     <table id="table" class="animate__animated animate__fadeIn animate__fast">
