--- a/src/app/crm/pages/nuevo-cliente/nuevo-cliente.component.html
+++ b/src/app/crm/pages/nuevo-cliente/nuevo-cliente.component.html
@@ -54,10 +54,14 @@
             </div>
         
             <button class="btnSubmit" 
-            type="submit">
+            type="submit"
+            >
             {{ (clienteId) ? 'Actualizar' : 'Guardar' }} </button>
             
-            <button class="btnSubmit" *ngIf="clienteId" (click)="borrar()"> Borrar registro </button>  
+            <button class="btnSubmit"
+             *ngIf="clienteId" 
+             (click)="borrar()"> 
+             Borrar registro </button>  
             
            
            </form>
