--- a/src/app/crm/pages/clientes/clientes.component.html
+++ b/src/app/crm/pages/clientes/clientes.component.html
@@ -2,7 +2,7 @@
 
     <h2 class="animate__animated animate__fadeInDown" > Clientes registrados </h2>
 
-    <div class="flex-input animate__animated animate__fadeIn ">
+    <div class="flex-input animate__animated animate__fadeIn search">
         <app-search-input></app-search-input>
     
     </div>
