--- a/src/app/crm/components/search-input/search-input.component.html
+++ b/src/app/crm/components/search-input/search-input.component.html
@@ -1,47 +1,34 @@
+<div class="form-search">
+    <mat-form-field class="example-full-width" appearance="fill">
+        <mat-label> <small> Puede buscar por cualquier campo que tenga información. </small></mat-label>
+        <input type="text"
+               placeholder="Busque algún registro"
+               aria-label="Number"
+               matInput
+               [(ngModel)]="termino"
+               [matAutocomplete]="auto"
+               (input)="buscando()">
+        <mat-autocomplete autoActiveFirstOption 
+                          #auto="matAutocomplete"
+                          (optionSelected)="opcionSeleccionada($event)">
+          <mat-option *ngFor="let cliente of clientes " [value]="cliente">
+            {{ cliente.name }}
+          </mat-option>
 
-<form  (ngSubmit)="buscar()" autocomplete="off">
-
-    <input class="search" 
-    type="text"
-    name="termino" 
-    [(ngModel)]="termino"
-    placeholder="Busque algún registro...">
-
-</form>
-
-<hr>
-
-<div *ngIf="termino.includes('')" class="alert alert-danger" >
-    No se encontro ningún registro con los terminos "{{termino}}"
-</div>
-
-<div class="row">
-
-    <div class="col">
-        <table class="table table-hover" >
-            <thead>
-                <tr>
-                    <th> Nombre del cliente </th>
-                    <th> Numero de celular </th>
-                    <th> Correo electrónico </th>
-                    <th>  </th>
-                    <th>  </th>
-                </tr>
-            </thead>
-
-            <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>nombre</td>
-                        <td>numero</td>
-                        <td>correo</td>
-                    </tr>
-            </tbody>
-
-        </table>
-    </div>
+          <mat-option value="" *ngIf="clientes.length === 0 && termino.trim().length > 0">
+            No hay resultados para "{{termino}}"
+          </mat-option>
+        </mat-autocomplete>
+       
+      </mat-form-field>
+    
+      
 
 </div>
 
+<div class="container" *ngIf="clienteSeleccionado" >
+    <h2 class="animate__animated animate__fadeIn animate__fast"> Registro obtenido </h2>
+    <app-registro [cliente]="clienteSeleccionado" ></app-registro>
+</div>
 
 
