--- a/src/app/crm/components/search-input/search-input.component.scss
+++ b/src/app/crm/components/search-input/search-input.component.scss
@@ -1,22 +1,23 @@
-.search{
-    height: 30px;
-    width: 600px;
-    
-    // margin-left: -70px;
-    // margin-right: 30px;
-    // align-self: center;
-    // justify-self: center;
-    
-    outline-style: none;
-    border: none;
-    border-radius: 7px;
-    padding-left: 10px;
+.form-search{
+  width: 100%;
+}
 
-    transition: 300ms all;
+.container{
+  margin: 0px auto;
+  text-align: center;
+
+    h2{
+      text-align: center;
+    }
 }
 
 
-.search:focus{
-    box-shadow: inset 3px 3px 16px 1px rgba(130, 128, 128, 0.64);
-    outline-style: none;
-}
+  
+  .example-full-width {
+
+    width: 867px;
+    display: flex;
+    
+
+  }
+  
