--- a/src/app/crm/pages/home/home.component.html
+++ b/src/app/crm/pages/home/home.component.html
@@ -3,7 +3,7 @@
 
         <div class="content">
     
-            <h2 routerLink="./inicio" > Manage your clients </h2>
+            <h2 routerLink="./inicio" > Administre sus clientes </h2>
     
            
     
