--- a/src/app/crm/pages/clientes/clientes.component.html
+++ b/src/app/crm/pages/clientes/clientes.component.html
@@ -29,7 +29,8 @@
 
     <div class="flex-reg">
         
-        <span class="register-none"> {{hayRegistros}} </span>
+        <span class="register-none animate__animated animate__fadeIn animate__delay-1s">
+             {{hayRegistros}} </span>
 
     </div>
 
