--- a/src/app/crm/pages/clientes/clientes.component.scss
+++ b/src/app/crm/pages/clientes/clientes.component.scss
@@ -42,6 +42,12 @@
                 text-align: center;
                 border: 2px solid black;
                 padding: 10px;
+
+                button{
+                    background: black;
+                    color: white;
+                    margin: 10px;
+                }
             }
             
         }
