--- a/src/app/crm/pages/inicio/inicio.component.html
+++ b/src/app/crm/pages/inicio/inicio.component.html
@@ -3,10 +3,7 @@
     <div class="content">
 
         <article class="fraction">
-            <p class="animate__animated animate__fadeInLeft animate__fast"> Project to manage your clients, where you can add them by name, cell phone number, email, address,
-                company and add description.
-
-                The fields to fill in are optional so you will only add the fields you need. </p>
+            <p class="animate__animated animate__fadeInLeft animate__fast"> Proyecto hecho para administrar clientes/registros, donde los campos "Nombre" y "Número" de celular son los unicos obligatorios, backend hecho en NodeJS (express) y utilizando DB MySQL y frontend hecho en Angular. </p>
         </article>
 
         <section class="image animate__animated animate__fadeIn">
@@ -16,7 +13,7 @@
     </div>
     
     <section class="contacto">
-        <h2 class="animate__animated animate__fadeInUp"> You can check my projects in my github repository and i attached my linkedin </h2>
+        <h2 class="animate__animated animate__fadeInUp"> Puedes revisar mis demás proyectos en mi Github y te dejo mi perfil de Linkedin </h2>
 
         <ul class="animate__animated animate__fadeInUp">
             <li>
