--- a/src/app/crm/pages/nuevo-cliente/nuevo-cliente.component.scss
+++ b/src/app/crm/pages/nuevo-cliente/nuevo-cliente.component.scss
@@ -62,8 +62,9 @@
                 margin-right: 20px;
                 margin-bottom: 30px;
                 border-radius: 5px;
-
                 transition: 100ms all;
+                background: black;
+                color: white;
                 
             }
 
@@ -72,7 +73,7 @@
             }
 
             .btnSubmit:hover{
-                color: green;
+                color: rgb(18, 205, 18);
                 
             }
             
